- add third module and exercises

--- a/03_converters-tests/pom.xml
+++ b/03_converters-tests/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>unit-testing-sda</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>figures-tests</artifactId>
-    <name>figures-tests</name>
+    <artifactId>converters-tests</artifactId>
+    <name>converters-tests</name>
 
 </project>
