--- a/06_first-integration-tests/pom.xml
+++ b/06_first-integration-tests/pom.xml
@@ -10,4 +10,14 @@
     <artifactId>first-integration-tests</artifactId>
     <name>first-integration-tests</name>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
